--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "nodews",
+  "name": "node-vms",
   "version": "1.0.0",
-  "description": "Nodejs-server",
+  "description": "nodejs",
   "main": "index.js",
+  "author": "eooce",
+  "license": "MIT",
   "private": false,
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "ws": "^8.14.2",
-    "axios": "^1.12.2"
+    "jsvms": "^1.0.0"
+    "axios": "latest"
   },
   "engines": {
     "node": ">=14"
